# pypsa-network-topology-plotter

./: .gitignore  README.md  pyproject.toml  setup.py
.github/: copilot-instructions.md
definitions/variable/: electricity-generation.yaml  energy-consumption.yaml  final_energy.yaml  trade.yaml
energy_balance_evaluation/: __init__.py  eb_evaluation_to_iamc.ipynb  energy_balance_eval.py  pypsa_network_eval.py  statics.py  utils.py
energy_balance_evaluation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: TEST_README.md  __init__.py  conftest.py  run_tests.py  test_basics.py  test_cli.py  test_energy_balance.py  test_helpers.py  test_imports.py  test_integration.py  test_statics.py  test_utils.py
