[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "energy_balance_evaluation"
version = "0.1.1"
description = "A package to evaluate eurostat energy balance data for validation of pypsa-Networks"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Max Nutz", email = "max.nutz@boku.ac.at"}
]
dependencies = [
    "pandas>=1.0.0",
    "numpy>=1.18.0",
    "pyyaml>=5.3",
    "pypsa>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/maxnutz/energy_balance_evaluation"

[tool.setuptools.packages.find]
include = ["energy_balance_evaluation"]